# ios-simulator-cleaner

./: README.md  pyproject.toml  simulators_cleaner.py  simulators_manager.py
.github/workflows/: ci.yml  release.yml
Formula/: ios-simulator-cleaner.rb
docs/: automation-roadmap.md  homebrew.md
ios_simulator_cleaner/: __init__.py  cli.py  core.py
