[project]
name = "ios-simulator-cleaner"
version = "0.1.0"
description = "This is a CLI project that allows listing and cleaning the iOS simulator to free up space on a Mac."
authors = [
    {name = "Jose Aponte",email = "joseapontec@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich (>=14.0.0,<15.0.0)",
    "questionary (>=2.1.0,<3.0.0)"
]
[project.scripts]
ios-simulator-cleaner = "ios_simulator_cleaner.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
packages = [
    {include = "ios_simulator_cleaner"}
]
